# RP_robot_manipulator

./: CMakeLists.txt  README.md  package.xml
config/: joints.yaml
example_manipulators/: DH_params1.txt  DH_params2.txt  DH_params3.txt  DH_params4.txt  DH_params5.txt
launch/: .gazebo.launch.swp  gazebo.launch  gazebo_template.txt
src_cpp/: DH_params.txt  inverse_kinematics.cpp  make_manipulator.cpp  set_joints.cpp  utils_control.h  utils_iofile.h  utils_kinematics.h
urdf/: Claw.stl  base.xacro  claw.xacro  f_link.xacro  main.xacro  main_original.xacro  p_link.xacro  r_link.xacro  temp.txt  temp.xacro
